feat: add development dates for creations

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -3,10 +3,11 @@ import type { CollectionEntry } from "astro:content";
 import Overlay from "./Overlay.astro";
 import { formatDate } from "../scripts/lib";
 
-export interface Props {
-	post: CollectionEntry<"creations" | "posts">;
+export interface Props<TCollection extends "creations" | "posts"> {
+	collection: TCollection;
+	post: CollectionEntry<TCollection>;
 }
-const { post } = Astro.props;
+const { collection, post } = Astro.props;
 
 const title = post.data.title;
 const { Content, remarkPluginFrontmatter: frontmatter } = await post.render();
@@ -19,6 +20,22 @@ const releaseDate = new Date(frontmatter.released ?? frontmatter.pubDate);
 
 if (isNaN(releaseDate.getTime()))
 	throw Error(`Post "${post.id}" does not have a valid date`);
+
+const extraInfo: string[] = [];
+switch (collection) {
+	case "creations":
+		extraInfo.push(
+			`developed ${formatDate(new Date(frontmatter.developedStart))} to ${frontmatter.developedEnd ? formatDate(new Date(frontmatter.developedEnd)) : "now"}`,
+		);
+		break;
+}
+
+const info = [
+	`Released on ${formatDate(releaseDate)}`,
+	`${readtime.words} words`,
+	`${readtime.text} time`,
+	...extraInfo,
+];
 ---
 
 <Overlay
@@ -28,9 +45,7 @@ if (isNaN(releaseDate.getTime()))
 	<div class="text-start">
 		<h1>{title}</h1>
 		<i>
-			Released on {formatDate(releaseDate)}, {readtime.words} words, {
-				readtime.text
-			} time
+			{info.join(", ")}
 		</i>
 		<br />
 		<br />
