fix: highlight headings better

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -50,5 +50,17 @@ const info = [
 		<br />
 		<br />
 		<Content />
+		<style>
+			@media (min-width: 576px) {
+				* :global(h1, h2, h3, h4, h5, h6) {
+					margin-left: -2rem;
+				}
+			}
+			@media (max-width: 575px) {
+				* :global(h1, h2, h3, h4, h5, h6) {
+					margin-left: 1rem;
+				}
+			}
+		</style>
 	</div>
 </Overlay>
