--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -36,8 +36,13 @@ let date = formatDate(new Date());
 					}
 					<li class="nav-item">
 						<div class="nav-link">
-							<span title={"Commit: " + hash}>{hash.slice(0, 8)}</span
-							>&nbsp;|&nbsp;{date}
+							<a
+								class="nav-link"
+								href={`https://github.com/S1rDev10us/s1rdev10us.github.io/commit/${hash}`}
+								title={"Commit: " + hash}
+							>
+								{hash.slice(0, 8)}&nbsp;|&nbsp;{date}
+							</a>
 						</div>
 					</li>
 
