fix: remove unintended padding

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@ let date = formatDate(new Date());
 					<li class="nav-item">
 						<div class="nav-link">
 							<a
-								class="nav-link"
+								class="nav-link py-0"
 								href={`https://github.com/S1rDev10us/s1rdev10us.github.io/commit/${hash}`}
 								title={"Commit: " + hash}
 							>
