fix: import MarkdownLayoutProps as type

--- a/src/layouts/MdOverlay.astro
+++ b/src/layouts/MdOverlay.astro
@@ -1,5 +1,5 @@
 ---
-import { MarkdownLayoutProps } from "astro";
+import type { MarkdownLayoutProps } from "astro";
 import type { Props as overlayProps } from "./Overlay.astro";
 import Overlay from "./Overlay.astro";
 
